--- a/products/templates/products/products.html
+++ b/products/templates/products/products.html
@@ -98,7 +98,7 @@
 
                     {% if products.has_next %}
                     <li class="page-item">
-                        <a class="page-link" href="?page={{products.next_page_number}}">Следующая</a>
+                        <a class="page-link" style="border-radius: 11px;" href="?page={{products.next_page_number}}">Следующая</a>
                     </li>
                     {% endif %}
                 </ul>
