--- a/products/templates/products/products.html
+++ b/products/templates/products/products.html
@@ -83,7 +83,7 @@
                 <ul class="pagination justify-content-center">
                     {% if products.has_previous %}
                     <li class="page-item">
-                        <a class="page-link" href="?page={{products.previous_page_number}}" tabindex="-1"
+                        <a class="page-link" style="border-radius: 11px;" href="?page={{products.previous_page_number}}" tabindex="-1"
                            aria-disabled="true">Предыдущая</a>
                     </li>
                     {% endif %}
