--- a/products/templates/products/base.html
+++ b/products/templates/products/base.html
@@ -49,6 +49,9 @@
                 </li>
                 {% endif %}
             </ul>
+             <div class="my-4">
+                    <img class="murakami" src="{% static 'vendor/img/slides/murakamifashio1.png' %}" alt="murakami">
+             </div>
         </div>
     </div>
 </nav>
