--- a/products/static/css/index.css
+++ b/products/static/css/index.css
@@ -1,5 +1,5 @@
 body {
-    background: url("../vendor/img/shopvintagefashion14.png") no-repeat center top fixed;
+    background: url("../vendor/img/murakamiscreenlog1.png") no-repeat center top fixed;
     -webkit-background-size: cover;
     -moz-background-size: cover;
     background-size: cover;
@@ -8,12 +8,11 @@ body {
 }
 
 #start-purchase-btn {
-    background-color: #272c31;
-    border-color: rgb(255, 255, 255);
+    background-color: #ffffff;
+    border: 4px solid #2a85c1b4;
     float: left;
-    border-radius: 4px;
+    border-radius: 11px;
     margin-top: 370px;
-    opacity: 0.9;
 }
 
 #start-purchase-link {
@@ -32,4 +31,12 @@ body {
 }
 .container .col-lg-6{
     margin-top: 20px;
+}
+.murakami{ 
+    max-width: 100%;
+    max-height: 53px;
+    border: none;
+    opacity: 0.8;
+    margin: 0;
+    margin-left: 7px;
 }
