--- a/products/static/css/products.css
+++ b/products/static/css/products.css
@@ -50,3 +50,11 @@ h4 {
 .center{
     text-align: center;
 }
+.murakami{ 
+    max-width: 100%;
+    max-height: 53px;
+    border: none;
+    opacity: 0.8;
+    margin: 0;
+    margin-left: 7px;
+}
