--- a/products/templates/products/index.html
+++ b/products/templates/products/index.html
@@ -13,7 +13,7 @@
             <div class="col-lg-6">
                 <img src="{% static 'vendor/img/icon.png' %}" alt="" width="300">
                 <button id="start-purchase-btn" type="button" class="btn btn-lg">
-                    <a id="start-purchase-link" style="color: white; font-weight:bold;" href="{% url 'products' %}">
+                    <a id="start-purchase-link" style="color: #272c31; font-weight:bold;" href="{% url 'products' %}">
                         Start shopping
                     </a>
                 </button>
