--- a/products/templates/products/products.html
+++ b/products/templates/products/products.html
@@ -7,39 +7,32 @@
 {% endblock %}
 
 {% block content %}
-
-
 <div class="container">
-
     <div class="row">
-
         <div class="col-lg-3">
-
-
             {% include 'products/category.html' %}
-
         </div>
 
         <div class="col-lg-9">
-
             <div id="carouselExampleIndicators" class="carousel slide my-4" data-ride="carousel">
                 <ol class="carousel-indicators">
                     <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
                     <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
                     <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+                    <li data-target="#carouselExampleIndicators" data-slide-to="3"></li>
                 </ol>
                 <div class="carousel-inner" role="listbox">
                     <div class="carousel-item active">
-                        <img class="d-block img-fluid" src="{% static 'vendor/img/slides/lefleur1.png' %}"
-                             alt="First slide">
+                        <img class="d-block img-fluid" src="{% static 'vendor/img/slides/lefleur1.png' %}" alt="First slide">
                     </div>
                     <div class="carousel-item">
-                        <img class="d-block img-fluid" src="{% static 'vendor/img/slides/fashionists.png' %}"
-                             alt="Second slide">
+                        <img class="d-block img-fluid" src="{% static 'vendor/img/slides/fashionists.png' %}" alt="Second slide">
                     </div>
                     <div class="carousel-item">
-                        <img class="d-block img-fluid" src="{% static 'vendor/img/slides/lvtyler.png' %}"
-                             alt="Third slide">
+                        <img class="d-block img-fluid" src="{% static 'vendor/img/slides/lvtyler.png' %}" alt="Third slide">
+                    </div>
+                    <div class="carousel-item">
+                        <img class="d-block img-fluid" src="{% static 'vendor/img/slides/pharrelllv1.png' %}" alt="pharrel slide">
                     </div>
                 </div>
                 <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
@@ -53,14 +46,11 @@
             </div>
 
             <div class="row">
-
                 {% for product in products %}
                 <div class="col-lg-4 col-md-6 mb-4">
                     <div class="card h-100">
                         <a href="{% url 'product' product.id %}">
-                            <img class="card-img-top"
-                                 src="{{ product.image.url }}"
-                                 alt="">
+                            <img class="card-img-top" src="{{ product.image.url }}" alt="">
                         </a>
                         <div class="card-body">
                             <h4 class="card-title">
@@ -70,8 +60,7 @@
                             <p class="card-text">{{ product.short_description }}</p>
                         </div>
                         <div class="card-footer text-center">
-                            <a href="{% url 'basket_add' product.id %}" class="btn btn-outline-success">Отправить в
-                                корзину</a>
+                            <a href="{% url 'basket_add' product.id %}" class="btn btn-outline-success">Отправить в корзину</a>
                         </div>
                     </div>
                 </div>
@@ -83,16 +72,13 @@
                 <ul class="pagination justify-content-center">
                     {% if products.has_previous %}
                     <li class="page-item">
-                        <a class="page-link" style="border-radius: 11px;" href="?page={{products.previous_page_number}}" tabindex="-1"
-                           aria-disabled="true">Предыдущая</a>
+                        <a class="page-link" style="border-radius: 11px;" href="?page={{products.previous_page_number}}" tabindex="-1" aria-disabled="true">Предыдущая</a>
                     </li>
                     {% endif %}
 
                     {% if products.has_other_pages %}
                     {% for page in products.paginator.page_range %}
-                    <li
-                            class="page-item {% if page == products.number %} active {% endif %}"><a class="page-link"
-                                                                            href="?page={{page}}">{{page}}</a></li>
+                    <li class="page-item {% if page == products.number %} active {% endif %}"><a class="page-link" href="?page={{page}}">{{page}}</a></li>
                     {% endfor %}
                     {% endif %}
 
@@ -104,11 +90,7 @@
                 </ul>
             </nav>
             {% endif %}
-
         </div>
-
     </div>
-
 </div>
-
 {% endblock %}
