--- a/products/templates/products/products.html
+++ b/products/templates/products/products.html
@@ -20,6 +20,7 @@
                     <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
                     <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
                     <li data-target="#carouselExampleIndicators" data-slide-to="3"></li>
+                    <li data-target="#carouselExampleIndicators" data-slide-to="4"></li>
                 </ol>
                 <div class="carousel-inner" role="listbox">
                     <div class="carousel-item active">
@@ -33,6 +34,9 @@
                     </div>
                     <div class="carousel-item">
                         <img class="d-block img-fluid" src="{% static 'vendor/img/slides/pharrelllv1.png' %}" alt="pharrel slide">
+                    </div>
+                    <div class="carousel-item">
+                        <img class="d-block img-fluid" src="{% static 'vendor/img/slides/murakamislide1.png' %}" alt="murakami slide">
                     </div>
                 </div>
                 <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
