--- a/products/templates/products/index.html
+++ b/products/templates/products/index.html
@@ -12,11 +12,11 @@
         <div class="row">
             <div class="col-lg-6">
                 <img src="{% static 'vendor/img/icon.png' %}" alt="" width="300">
-                <button id="start-purchase-btn" type="button" class="btn btn-lg">
-                    <a id="start-purchase-link" style="color: #272c31; font-weight:bold;" href="{% url 'products' %}">
-                        Start shopping
-                    </a>
-                </button>
+              <button id="start-purchase-btn" type="button" class="btn btn-lg">
+                <a id="start-purchase-link"  href="{% url 'products' %}">
+                    <img src="{% static 'vendor/img/arrowshoping1.png' %}" alt="Start shopping">
+                </a>
+              </button>
             </div>
         </div>
     </div>
