--- a/products/static/css/index.css
+++ b/products/static/css/index.css
@@ -8,13 +8,21 @@ body {
 }
 
 #start-purchase-btn {
-    background-color: #ffffff;
-    border: 4px solid #2a85c1b4;
     float: left;
-    border-radius: 11px;
-    margin-top: 370px;
+    border-radius: 20px;
+    border: none;
+    margin-top: 40px;
+    opacity: 0.8;
+    transition: all linear 0.3s;
 }
-
+#start-purchase-btn:hover {
+    opacity: 1;
+}
+#start-purchase-btn img {
+    border: none;
+    max-width: 100%;
+    height: 170px;
+}
 #start-purchase-link {
     text-decoration: none;
     color: #00410c;
@@ -39,4 +47,9 @@ body {
     opacity: 0.8;
     margin: 0;
     margin-left: 7px;
+    vertical-align: -2px;
+    transition: all ease-in-out 0.3s;
+}
+.murakami:hover{
+    opacity: 1;
 }
