--- a/products/templates/products/products.html
+++ b/products/templates/products/products.html
@@ -76,7 +76,7 @@
                 <ul class="pagination justify-content-center">
                     {% if products.has_previous %}
                     <li class="page-item">
-                        <a class="page-link" style="border-radius: 11px;" href="?page={{products.previous_page_number}}" tabindex="-1" aria-disabled="true">Предыдущая</a>
+                        <a class="page-link" style="border-radius: 11px; margin-right: 11px" href="?page={{products.previous_page_number}}" tabindex="-1" aria-disabled="true">&laquo;Предыдущая</a>
                     </li>
                     {% endif %}
 
@@ -88,7 +88,7 @@
 
                     {% if products.has_next %}
                     <li class="page-item">
-                        <a class="page-link" style="border-radius: 11px;" href="?page={{products.next_page_number}}">Следующая</a>
+                        <a class="page-link" style="border-radius: 11px; margin-left: 11px;" href="?page={{products.next_page_number}}">Следующая&raquo;</a>
                     </li>
                     {% endif %}
                 </ul>
