--- a/products/static/css/auth.css
+++ b/products/static/css/auth.css
@@ -2545,6 +2545,7 @@ fieldset:disabled a.btn {
     color: #fff;
     background-color: #32373d;
     border-color: #32373d;
+    opacity: 0.87;
     transition: all ease-in-out 0.3s;
 }
 
@@ -2889,8 +2890,8 @@ fieldset:disabled a.btn {
 
 .btn-outline-success:hover {
     color: #fff;
-    background-color: #28a745;
-    border-color: #28a745;
+    background-color: #98a726;
+    border-color: #98a726;
 }
 
 .btn-outline-success:focus, .btn-outline-success.focus {
