--- a/products/static/css/index.css
+++ b/products/static/css/index.css
@@ -5,6 +5,8 @@ body {
     background-size: cover;
     -o-background-size: cover;
     padding-top: 56px;
+    position: relative;
+    z-index: 1;
 }
 
 #start-purchase-btn {
@@ -13,6 +15,8 @@ body {
     border: none;
     margin-top: 40px;
     opacity: 0.8;
+    position: relative;
+    z-index: 1000;
     transition: all linear 0.3s;
 }
 #start-purchase-btn:hover {
@@ -21,7 +25,7 @@ body {
 #start-purchase-btn img {
     border: none;
     max-width: 100%;
-    height: 170px;
+    height: 140px;
 }
 #start-purchase-link {
     text-decoration: none;
@@ -47,7 +51,7 @@ body {
     opacity: 0.8;
     margin: 0;
     margin-left: 7px;
-    vertical-align: -2px;
+    vertical-align: top;
     transition: all ease-in-out 0.3s;
 }
 .murakami:hover{
