--- a/products/static/css/products.css
+++ b/products/static/css/products.css
@@ -57,7 +57,7 @@ h4 {
     opacity: 0.8;
     margin: 0;
     margin-left: 7px;
-    vertical-align: -2px;
+    vertical-align: top;
     transition: all ease-in-out 0.3s;
 }
 .murakami:hover{
