--- a/products/templates/products/base.html
+++ b/products/templates/products/base.html
@@ -24,7 +24,10 @@
 
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
     <div class="container">
-        <a class="navbar-brand" href="{% url 'index' %}">WFStore</a>
+        <a class="navbar-brand" href="{% url 'index' %}">
+            WFStore
+            <img src="{% static 'vendor/img/butterflylogo1.png' %}" alt="WFStore" style="height: 46px; margin-right: 10px;">
+        </a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive"
                 aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
