--- a/users/templates/users/base.html
+++ b/users/templates/users/base.html
@@ -38,6 +38,11 @@
                         {% endblock %}
 
                     </div>
+                    <button id="back-shopping" type="button" class="btn btn-lg">
+                    <a id="shopping"  href="{% url 'products' %}">
+                        <img src="{% static 'vendor/img/arrowshoping1.png' %}" alt="Start shopping">
+                    </a>
+                    </button>
                 </div>
             </div>
         </main>
