--- a/products/static/css/auth.css
+++ b/products/static/css/auth.css
@@ -482,6 +482,23 @@ mark,
     height: auto;
 }
 
+#back-shopping  {
+    margin-top: 470px;
+    margin-left: 40px;
+    opacity: 0.8;
+    transition: all ease-in-out 0.3s;
+}
+
+#back-shopping:hover {
+    opacity: 1;
+}
+
+#back-shopping img {
+    max-width: 100%;
+    height: 140px;
+    transform: scaleX(-1); 
+}
+
 .img-thumbnail {
     padding: 0.25rem;
     background-color: #fff;
