--- a/products/templates/products/category.html
+++ b/products/templates/products/category.html
@@ -1,5 +1,5 @@
 <div class="list-group">
-    <a href="{% url 'products' %}" class="list-group-item">Все категории</a>
+    <a href="{% url 'products' %}" class="list-group-item">&#10047; Все категории &#10047;</a>
     {% for category in categories %}
     <a href="{% url 'category' category.id %}" class="list-group-item">{{ category.name }}</a>
     {% endfor %}
