--- a/products/templates/products/product.html
+++ b/products/templates/products/product.html
@@ -37,7 +37,7 @@ btn-outline-success basket">Отправить в корзину
                     </button>
                     <!--                    <h4 class="basket"><a href="#">В КОРЗИНУ</a></h4>-->
                     <h5 class="quantity">В наличии: {{ product.quantity }} шт.</h5>
-                    <div>
+                    <div class="info-product">
                         <p>
                             {{ product.description|safe }}
                         </p>
