--- a/users/templates/users/profile.html
+++ b/users/templates/users/profile.html
@@ -14,7 +14,7 @@
             <h4 class="mt-3 mb-3">Профиль</h4>
             <div class="col-lg-12 text-center">
                 <img width="100" height="100"
-                     src="{% if user.image %} {{ user.image.url }} {% else %} {% static 'vendor/img/users/default.jpg' %} {% endif %}"
+                     src="{% if user.image %} {{ user.image.url }} {% else %} {% static 'vendor/img/users/avadefault1.png' %} {% endif %}"
                      class="img-thumbnail">
             </div>
             <form action="{% url 'profile' %}" method="post" enctype="multipart/form-data">
