--- a/users/templates/users/base.html
+++ b/users/templates/users/base.html
@@ -53,5 +53,6 @@
         crossorigin="anonymous"></script>
 <script src="{% static 'js/auth.js' %}"></script>
 <script src="{% static 'vendor/fontawesome/fontawesome-icons.js' %}" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/gsap@3.12.5/dist/gsap.min.js"></script>
 </body>
 </html>
