--- a/products/templates/products/base.html
+++ b/products/templates/products/base.html
@@ -53,7 +53,7 @@
                 {% endif %}
             </ul>
              <div class="my-4">
-                    <img class="murakami" src="{% static 'vendor/img/slides/murakamifashio1.png' %}" alt="murakami">
+                    <img id="murakami-image" class="murakami" src="{% static 'vendor/img/slides/murakamifashio1.png' %}" alt="murakami">
              </div>
         </div>
     </div>
@@ -66,6 +66,7 @@
 <script src="{% static 'vendor/bootstrap/js/bootstrap.bundle.min.js' %}"></script>
 <script src="{% static 'vendor/fontawesome/fontawesome-icons.js' %}" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/gsap@3.12.5/dist/gsap.min.js"></script>
+<script src="{% static 'js/animated-product-base.js' %}"></script>
 
 </body>
 
