--- a/products/static/css/products.css
+++ b/products/static/css/products.css
@@ -27,10 +27,12 @@ a:hover{
 .title{
     color: #272c31;
     opacity: 0.9;
+    font-size: 2em;
 }
 h4 {
     color: rgb(107, 107, 107);
     opacity: 0.77;
+    font-size: 1.5em;
 }
 .big{
     width: 100%;
@@ -42,20 +44,20 @@ h4 {
     padding: 11px;
     border: 1px solid rgb(190, 190, 190);
     background-color: rgba(255, 255, 255, 0.918);
-    width: 220px;
-    max-width: auto;
+    width: 194px;
+    font-size: 1.6em;
     border-radius: 11px;
     opacity: 0.8;
 }
 .basket{
     margin: 0 0 40px;
-    margin-left: 6px;
-    border: 3px solid white;
+    margin-left: 3px;
+    border: 1px solid rgb(190, 190, 190);
     border-radius: 6px;
 }
 .quantity{
     margin-bottom: 20px;
-    margin-left: 20px;
+    margin-left: 13px;
 }
 .info-product{
     padding-bottom: 11px;
@@ -75,7 +77,7 @@ h4 {
     max-width: 100%;
     max-height: 53px;
     border: none;
-    opacity: 0.8;
+    opacity: 0.9;
     margin: 0;
     margin-left: 7px;
     vertical-align: top;
