--- a/products/templates/products/base.html
+++ b/products/templates/products/base.html
@@ -67,6 +67,7 @@
 <script src="{% static 'vendor/fontawesome/fontawesome-icons.js' %}" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/gsap@3.12.5/dist/gsap.min.js"></script>
 <script src="{% static 'js/animated-product-base.js' %}"></script>
+<script src="{% static 'js/animated-arrow-shopping.js' %}"></script>
 
 </body>
 
