--- a/products/templates/products/index.html
+++ b/products/templates/products/index.html
@@ -14,7 +14,7 @@
                 <img src="{% static 'vendor/img/icon.png' %}" alt="" width="300">
               <button id="start-purchase-btn" type="button" class="btn btn-lg">
                 <a id="start-purchase-link"  href="{% url 'products' %}">
-                    <img src="{% static 'vendor/img/arrowshoping1.png' %}" alt="Start shopping">
+                    <img id="arrow-shopping" src="{% static 'vendor/img/arrowshoping1.png' %}" alt="Start shopping">
                 </a>
               </button>
             </div>
