--- a/products/templates/products/base.html
+++ b/products/templates/products/base.html
@@ -68,6 +68,7 @@
 <script src="https://cdn.jsdelivr.net/npm/gsap@3.12.5/dist/gsap.min.js"></script>
 <script src="{% static 'js/animated-product-base.js' %}"></script>
 <script src="{% static 'js/animated-arrow-shopping.js' %}"></script>
+<script src="{% static 'js/categoty-animated.js' %}"></script>
 
 </body>
 
