--- a/products/templates/products/index.html
+++ b/products/templates/products/index.html
@@ -11,7 +11,7 @@
     <div class="container">
         <div class="row">
             <div class="col-lg-6">
-                <img src="{% static 'vendor/img/icon.png' %}" alt="" width="300">
+                <img class="icon-logo" src="{% static 'vendor/img/icon.png' %}" alt="" width="300">
               <button id="start-purchase-btn" type="button" class="btn btn-lg">
                 <a id="start-purchase-link"  href="{% url 'products' %}">
                     <img id="arrow-shopping" src="{% static 'vendor/img/arrowshoping1.png' %}" alt="Start shopping">
