--- a/products/templates/products/base.html
+++ b/products/templates/products/base.html
@@ -69,6 +69,7 @@
 <script src="{% static 'js/animated-product-base.js' %}"></script>
 <script src="{% static 'js/animated-arrow-shopping.js' %}"></script>
 <script src="{% static 'js/categoty-animated.js' %}"></script>
+<script src="{% static 'js/products-animated.js' %}"></script>
 
 </body>
 
