--- a/products/templates/products/base.html
+++ b/products/templates/products/base.html
@@ -70,6 +70,7 @@
 <script src="{% static 'js/animated-arrow-shopping.js' %}"></script>
 <script src="{% static 'js/categoty-animated.js' %}"></script>
 <script src="{% static 'js/products-animated.js' %}"></script>
+<script src="{% static 'js/animated-window.js' %}"></script>
 
 </body>
 
