--- a/users/templates/users/register.html
+++ b/users/templates/users/register.html
@@ -5,7 +5,7 @@
 {% block content %}
 
 <div class="card shadow-lg border-0 rounded-lg mt-5">
-    <div class="card-header"><h3 class="text-center font-weight-light my-4">&#10047; Создать аккаунт &#10047;</h3>
+    <div class="card-header"><h3 style="color: #385f88; opacity: 0.9;" class="text-center font-weight-light my-4">&#10047; Создать аккаунт &#10047;</h3>
     </div>
     <div class="card-body">
         <form action="{% url 'register' %}" method="post">
