--- a/users/templates/users/base.html
+++ b/users/templates/users/base.html
@@ -55,5 +55,6 @@
 <script src="{% static 'vendor/fontawesome/fontawesome-icons.js' %}" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/gsap@3.12.5/dist/gsap.min.js"></script>
 <script src="{% static 'js/animated-back-shopping.js' %}"></script>
+<script src="{% static 'js/animated-card.js' %}"></script>
 </body>
 </html>
