--- a/products/templates/products/basket.html
+++ b/products/templates/products/basket.html
@@ -5,12 +5,12 @@
             </h4>
 
             {% for basket in baskets %}
-            <div class="card mb-3">
-                <div class="card-body">
-                    <h5 class="card-title">{{ basket.product.name }}</h5>
-                    <p class="card-text">{{ basket.product.short_description }}</p>
+            <div class="cardo mb-3">
+                <div class="cardo-body">
+                    <h5 class="cardo-title">{{ basket.product.name }}</h5>
+                    <p class="cardo-text">{{ basket.product.short_description }}</p>
                 </div>
-                <ul class="list-group list-group-flush">
+                <ul class="listo-group listo-group-flush">
                     <li class="list-group-item d-flex justify-content-between lh-condensed bg-light">
                         <span class="text-muted">{{ basket.quantity }} шт.</span>
                         <span class="text-muted">{{ basket.sum }} руб.</span>
@@ -31,8 +31,8 @@
             </div>
             {% endfor %}
 
-            <div class="card mb-3">
-                <div class="card-footer">
+            <div class="cardo mb-3">
+                <div class="cardo-footer">
                     <p class="float-left">Итого</p>
                     <h4 class="float-right">{{ total_sum }} руб.</h4>
                 </div>
