--- a/products/static/css/products.css
+++ b/products/static/css/products.css
@@ -54,6 +54,10 @@ h4 {
     margin-left: 3px;
     border: 1px solid rgb(190, 190, 190);
     border-radius: 6px;
+    padding: 7px;
+}
+.basket:hover {
+    color: white;
 }
 .quantity{
     margin-bottom: 20px;
