--- a/products/templates/products/product.html
+++ b/products/templates/products/product.html
@@ -32,8 +32,8 @@
                     <h1 class="title">{{ product.name }}</h1>
                     <h4>{{ product.short_description }}</h4>
                     <h2 class="price">{{ product.price }} руб.</h2>
-                    <button type="button" class="btn
-btn-outline-success basket">Отправить в корзину
+                    <button type="button" class="btn-outline-success basket" onclick="location.href='{% url 'basket_add' product.id %}'">
+                        Отправить в корзину
                     </button>
 
                     <!--                    <h4 class="basket"><a href="#">В КОРЗИНУ</a></h4>-->
