--- a/products/templates/products/base.html
+++ b/products/templates/products/base.html
@@ -71,6 +71,8 @@
 <script src="{% static 'js/categoty-animated.js' %}"></script>
 <script src="{% static 'js/products-animated.js' %}"></script>
 <script src="{% static 'js/animated-window.js' %}"></script>
+<script src="{% static 'js/click_img.js' %}"></script>
+
 
 </body>
 
