--- a/products/static/css/index.css
+++ b/products/static/css/index.css
@@ -45,7 +45,7 @@ body {
     border: none;
     margin: 0;
     margin-left: 7px;
-    vertical-align: top;
+    vertical-align: -1px;
     transition: all ease-in-out 0.3s;
 }
 .icon-logo {
