--- a/products/static/css/products.css
+++ b/products/static/css/products.css
@@ -83,6 +83,6 @@ h4 {
     border: none;
     margin: 0;
     margin-left: 7px;
-    vertical-align: top;
+    vertical-align: -1px;
     transition: all ease-in-out 0.3s;
 }
