--- a/products/templates/products/products.html
+++ b/products/templates/products/products.html
@@ -93,7 +93,7 @@
                     {% endif %}
                 </ul>
             </nav>
-            <hr>
+            <hr style="width: 700px;">
             {% endif %}
         </div>
     </div>
